new park hotel content done here

--- a/style.css
+++ b/style.css
@@ -188,3 +188,50 @@ body{
     min-height: 600px;
 }
 
+/* park hotel starts here */
+
+.park-hotel-container{
+    border: 2px solid red;
+    max-width: 1320px;
+    min-height: 482px;
+    margin: 0 auto;
+    margin-top: 120px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 16px;
+    background: linear-gradient(180.00deg, rgba(255, 0, 0, 0.1),rgba(255, 0, 0, 0) 100%);
+    
+}
+
+.park-hotel-content p{
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 30px;
+    letter-spacing: 0%;
+    text-align: center;
+    text-transform: capitalize;
+    
+
+}
+
+.park-content-button{
+    border-radius: 5px;
+    padding: 10px 20px 10px 20px;
+    background: rgb(255, 0, 0);
+    color: rgb(255, 255, 255);
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 24px;
+    letter-spacing: 0%;
+    text-align: center;
+    text-transform: uppercase;
+    width: 50%;
+    margin: 0 auto;
+    margin-top: 44px;
+    
+}
+
