--- a/style.css
+++ b/style.css
@@ -337,3 +337,95 @@ body{
     height: 40%;
    
 }
+
+/* holiday section starts here */
+
+.holiday-section-container{
+    max-width: 1320px;
+    min-height: 986.07px;
+    margin-top: 120px;
+    margin: 0 auto;
+    position: relative;
+    
+    
+}
+
+.holiday-text-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 1068px;
+    height: 260px;
+    margin-left: 100px;
+}
+
+.holiday-text-container p{
+    color: rgb(7, 2, 17);
+    font-family: Inter;
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 29px;
+    letter-spacing: 0%;
+    text-align: left;
+}
+
+.holiday-text-container h1{
+    font-family: Merriweather;
+    font-size: 50px;
+    font-weight: 900;
+    line-height: 91px;
+    letter-spacing: 0%;
+    text-align: center;
+}
+
+#holiday{
+    color: rgb(255, 0, 0);
+}
+
+.holiday-text-container .holiday-para{
+    width: 800px;
+    height: 96px;
+    color: rgba(7, 2, 17, 0.6);
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 32px;
+    letter-spacing: 0%;
+    text-align: center;
+    margin-bottom: 40px;
+}
+
+.solid-color{
+    width: 1320px;
+    height: 229px;
+    background-color: red;
+    position: absolute;
+    top:77%
+}
+
+.gift-box{
+    width: 674.82px;
+    height: 577.96px;
+    position: relative;
+    z-index: 1;
+    display: flex;
+    justify-content: space-between;
+   
+}
+
+.girl-container{
+    width: 429px;
+    height: 433px;
+    position: relative;
+    left: 200px;
+    top: 8%;
+
+}
+
+.discount{
+    position: absolute;
+    left: 105%;
+    top: 17%;
+    z-index: 1;
+}
