--- a/style.css
+++ b/style.css
@@ -346,6 +346,7 @@ body{
     margin-top: 120px;
     margin: 0 auto;
     position: relative;
+    margin-top: 120px;
     
     
 }
@@ -357,7 +358,7 @@ body{
     justify-content: center;
     width: 1068px;
     height: 260px;
-    margin-left: 100px;
+    margin-left: 120px;
 }
 
 .holiday-text-container p{
@@ -428,4 +429,83 @@ body{
     left: 105%;
     top: 17%;
     z-index: 1;
+}
+
+/* subscribe container starts here */
+
+.subscribe-container{
+    max-width: 1320px;
+    min-height: 616px;
+    border-radius: 16px;
+    background: rgba(255, 0, 0, 0.05);
+    margin: 0 auto;
+    margin-top: 120px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.subscribe-content{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.subscribe-content img{
+    width: 100px;
+    height: 100px;
+    margin-bottom: 25px;
+}
+
+.subscribe-content h1{
+    color: rgb(7, 2, 17);
+    font-family: Merriweather;
+    font-size: 38px;
+    font-weight: 900;
+    line-height: 60px;
+    letter-spacing: 0%;
+    text-align: center;
+    text-transform: capitalize;
+}
+
+.subscribe-content p{
+    color: rgba(7, 2, 17, 0.6);
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 32px;
+    letter-spacing: 0%;
+    text-align: center;
+    width: 800px;
+    height: 64px;
+    margin-bottom: 48px;
+}
+
+/* subscribe button container starts here */
+
+.subscribe-button-container{
+    display: flex;
+    width: 308px;
+    height: 35px; 
+ 
+}
+
+.email-input{
+    padding: 0 20px;
+    /* border-radius: 50px; */
+    border-top-left-radius: 50px;
+    border-bottom-left-radius: 50px;
+    border: none;
+}
+
+.subscribe-button{
+    padding: 0 20px;
+    background-color: red;
+    color: white;
+    border-top-right-radius: 50px;
+    border-bottom-right-radius: 50px;
+    border: none;
+
 }
