--- a/style.css
+++ b/style.css
@@ -509,3 +509,68 @@ body{
     border: none;
 
 }
+
+
+/* portfolio-section starts here */
+
+.portfolio-section-container{
+    
+    width: 1320px;
+    height: 1163px;
+    margin: 0 auto;
+    margin-top: 120px;
+}
+
+
+
+.portfolio-para{
+    color: rgb(255, 0, 0);
+    font-family: Inter;
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 29px;
+    letter-spacing: 0%;
+    text-align: left;
+}
+
+.portfolio-section-content h1{
+    color: rgb(7, 2, 17);
+    font-family: Merriweather;
+    font-size: 30px;
+    font-weight: 900;
+    line-height: 60px;
+    letter-spacing: 0%;
+    text-align: left;
+    text-transform: capitalize;
+}
+
+.portfolio-para-2{
+    width: 800px;
+    color: rgba(7, 2, 17, 0.6);
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 32px;
+    letter-spacing: 0%;
+    text-align: left;
+    margin-bottom: 48px;
+}
+
+/* portfolio items starts here */
+
+.portfolio-items{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
+}
+
+.item{
+    width: 424px;
+    height: 450px;
+    
+}
+
+.item img{
+    width: 100%;
+    height: 100%;
+}
