--- a/style.css
+++ b/style.css
@@ -574,3 +574,90 @@ body{
     width: 100%;
     height: 100%;
 }
+
+/* footer section starts here */
+.footer-container{
+    width: 1320px;
+    height: 609px;
+    background: rgb(7, 2, 17);
+    margin: 0 auto;
+    border-radius: 16px;
+
+}
+
+.footer-first-section{
+    display: flex;
+    color: white;
+    justify-content: space-between;
+    margin-top: 100px;
+    padding: 40px;
+    margin-bottom: 25px;
+}
+
+.contact{
+    display: flex;
+    color: white;
+}
+
+.left-section p{
+    width: 375px;
+    color: rgb(255, 255, 255);
+    font-family: Inter;
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 40px;
+    letter-spacing: 0%;
+}
+
+.contact p{
+    color: rgb(255, 255, 255);
+    font-family: Inter;
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 30px;
+    letter-spacing: 0%;
+   
+}
+
+.contact i{
+    width: 19px;
+    height: 19px;
+    margin-right: 15px;
+}
+
+hr{
+    margin: 0 auto;
+    border: 1px solid rgba(255, 255, 255, 0.15);
+    width: 1250px;
+}
+
+.social-icons{
+    width: 400px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-evenly;
+    
+}
+
+.social-icons img{
+    margin-top: 30px;
+    margin-bottom: 40px;
+}
+
+.footer-last-text{
+   
+    display: flex;
+    justify-content: space-between;
+    margin-top: 60px;
+    padding: 40px;
+}
+
+.footer-last-text p{
+    color: rgb(255, 255, 255);
+    font-family: Inter;
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 29px;
+    letter-spacing: 0%;
+}
+
